# contrust

./: Cargo.toml  LICENSE_MIT  README.md
src/: gravity_calc.rs  grid.rs  grid_diff.rs  lib.rs  mass.rs  op_alias.rs  solver.rs  state.rs  tree.rs  type_alias.rs  universe.rs
www/: .gitignore  index.css  index.html  index.js  package.json
