[package]
name = "contrust"
description = "Simulates flow, thermal conductivity and universal gravity of a plane universe."
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"
license-file = "LICENSE_MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
apply = "*"
console_error_panic_hook = { version = "*", optional = true }
dimensioned = {git = "https://github.com/Amelia10007/dimensioned.git", branch = "amelia10007-patch-impl-trait"}
itertools = "*"
pair_macro = {version = "0.1.3", features = ["num-traits"]}
wasm-bindgen = "*"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
